client/src/document/index.scss
/* ... */
// Base typography styles. Trying to remove as much as possible from
// the .main-page-content override.
b,
strong {
  font-weight: var(--font-body-strong-weight);
  letter-spacing: 0.02rem;
}

table {
  border: 1px solid var(--border-primary);
  border-collapse: collapse;
  width: 100%;

  th {
    background: var(--background-tertiary);
    font-weight: var(--font-body-strong-weight);
    line-height: 1.5;
    text-align: left;
  }

  td,
  th {
    border: 1px solid var(--border-primary);
    padding: 0.5rem 0.75rem;
    vertical-align: middle;
  }

  td {
    .code-example pre {
      margin: 0;
    }

    ul {
      margin: 0;
    }
  }

  caption {
    font-weight: var(--font-body-strong-weight);
    margin: 1rem 0 0.5rem;
  }

  &.properties {
    border: none;
    font-size: var(--type-base-font-size);

    th,
    td {
      border: none;
    }

    th {
      background: none;
    }

    tr {
      border-bottom: 1px solid var(--border-secondary);

      &:first-child {
        border-top: 1px solid var(--border-primary);
      }

      &:last-child {
        border-bottom: 1px solid var(--border-primary);
      }
    }
  }

  &.properties,
  &.standard-table {
    tr {
      &:nth-child(odd) th,
      &:nth-child(odd) td {
        background-color: var(--background-secondary);
      }
    }
  }
}

iframe {
  border: 1px solid var(--border-primary);
  max-width: 100%;
  width: 100%;

  /* "Live Samples" discussion here:
  https://github.com/mdn/yari-private/issues/370,
  These src attributes taken from unsafe-html.js */
  &[src*="https://mdn.github.io"],
  &[src*="https://www.youtube-nocookie.com"],
  &[src*="https://jsfiddle.net"],
  &[src*="https://test262.report"],
  &.nobutton,
  &.sample-code-frame {
    background: #fff;
    border: 1px solid var(--border-primary);
    border-radius: var(--elem-radius);
    box-sizing: content-box;
    padding: 1rem;
    width: calc(100% - 2rem - 2px);
  }
}

h1,
h2,
h3 {
  letter-spacing: var(--heading-letter-spacing);
}

h1 {
  font: var(--type-heading-h1);
  margin-bottom: 2rem;
  word-break: break-word;

  @media screen and (min-width: $screen-md) {
    font: var(--type-heading-h1);
  }
}

h2 {
  font: var(--type-heading-h2);
  margin: 4rem 0 0.5rem;
}

h3 {
  font: var(--type-heading-h3);
  margin: 2rem 0 0.5rem;
}

/* When an h3 immediately follows an h2 we want to use
 * a smaller top margin. We also make accommodation
  for situations where there is an empty div
  between the two elements */
h2 ~ div ~ h3,
h2 ~ h3 {
  margin-top: 1rem;
}

h4 {
  font: var(--type-heading-h4);
  letter-spacing: 0.5px;
  margin: 2rem 0 1rem;
}

h5 {
  font: var(--type-heading-h5);
  letter-spacing: 1.5px;
  margin: 2rem 0 1rem;
  text-transform: uppercase;
}

h6 {
  font: var(--type-heading-h6);
  letter-spacing: 1.5px;
  margin: 2rem 0 1rem;
  text-transform: uppercase;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  code {
    font-size: inherit;
  }
}

p {
  margin: 1rem 0 2rem;
}

blockquote {
  border-left: 4px solid var(--border-secondary);
  color: var(--text-secondary);
  margin-bottom: 2rem;
  padding: 1rem 2rem;

  p {
    margin: 0;
  }
}

pre,
code,
.code-example {
  border-radius: var(--elem-radius);
  font-family: var(--font-code);
  font-size: var(--type-smaller-font-size);
}

code {
  background: var(--code-background-inline);
  padding: 0.125rem 0.25rem;
  width: fit-content;
}

pre {
  background-color: var(--code-background-block);
  border: 1px solid transparent;
  margin: 0;
  padding: 1rem 2.5rem 1rem 1rem;

  code {
    background: none;
    color: var(--text-primary);
    padding: 0;
  }
}

.example-good,
.example-bad {
  padding: 0 1rem;
  position: relative;

  &::before {
    background-size: 24px;
    content: "";
    float: right;
    height: 16px;
    margin-left: 8px;
    width: 16px;
  }
}

.example-bad + .copy-icon,
.example-good + .copy-icon {
  display: none;
}

.example-bad {
  background-color: var(--background-critical);

  &::before {
    background-color: var(--icon-critical);
    mask-image: url("../assets/icons/no.svg");
  }
}

.example-good {
  background-color: var(--background-success);

  &::before {
    background-color: var(--icon-success);
    mask-image: url("../assets/icons/checkmark.svg");
  }
}

/*
 * multi-column layout on pages with an index such as
 * https://developer.mozilla.org/en-US/docs/Web/API#Specifications
*/
.index {
  margin-bottom: 1rem;

  ul {
    margin: 0.5rem 0 2rem;

    @media screen and (min-width: $screen-xl) {
      columns: 3;
    }

    li {
      margin: 0 0 0.5rem;
    }
  }

  .icon-experimental,
  .icon-nonstandard {
    color: var(--icon-information);
  }

  .icon-deprecated {
    color: var(--icon-critical);
  }
}

.callout {
  background: var(--background-secondary);
  border: 1px solid var(--border-primary);
  border-radius: var(--elem-radius);
  box-shadow: var(--shadow-01);
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin: 2rem 0;
  padding: 1rem;
  text-align: left;

  h4 {
    margin: 0;
  }

  p {
    font: var(--type-smaller-font-size);
    margin: 0;
  }
}
/* ... */

